deployment/overlays/dev/gateway-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
      metadata:
        labels:
          app: gateway
