deployment/overlays/dev/job-patch.yml
# deployment/overlays/prod/job-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
